--- a/dsa/pom.xml
+++ b/dsa/pom.xml
@@ -2,12 +2,17 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.avengers.dsa</groupId>
-	<artifactId>dsa</artifactId>
-	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
-	<name>dsa</name>
-	<url>http://maven.apache.org</url>
+ <parent>
+     <groupId>com.avengers</groupId>
+         <artifactId>avengers-parent</artifactId>
+	     <version>1.0-SNAPSHOT</version>
+	       </parent>
+	         <groupId>com.avengers.dsa</groupId>
+		   <artifactId>dsa</artifactId>
+		     <version>1.0-SNAPSHOT</version>
+		       <name>dsa</name>
+		         <url>http://maven.apache.org</url>
+<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
